/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package slniecko;

import java.awt.*;
import java.io.IOException;
import javax.swing.Timer;
import javax.swing.UIManager;

@SuppressWarnings("serial")
public class Game extends javax.swing.JFrame
{

    private int objectCount;
    private String imagePath;

    private int score;
    private final Timer timer;

    /**
     * Creates new form Hra
     *
     * @param objectCount
     * @param imagePath
     */
    public Game(int objectCount, String imagePath) throws IOException
    {
        initComponents();
        this.objectCount = objectCount;
        this.imagePath = imagePath;
        this.score = 0;
        createGameObjectImage();
        PlayArea playArea = new PlayArea(this, 500, 500);
        this.contentPanel.add(playArea);
        this.pack();
        timer = new Timer(20, playArea);
        this.startGame();
    }

    public void createGameObjectImage()
    {
        GameObjectImageFactory factory = GameObjectImageFactory.getInstance();

        factory.getGameImage("/slniecko/_sun.png");

        GameObjectImage heartImage =  factory.getGameImage("/slniecko/_heart.png");
        if (heartImage != null)
        {
            heartImage.setDrawSize(20, 20);
        }

        factory.getGameImage("/slniecko/_target.png");
    }


    public static void main(String args[])
    {
        int makeObjectCount = 20;
        String imgUrl = null;
        if (args.length > 0)
        {
            makeObjectCount = Integer.parseInt(args[0]);
        }
        if (args.length > 1)
        {
            imgUrl = args[1];
        }

        try
        {
            UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
        }
        catch (Exception ex)
        {
        }

        final int makeObjectFinal = makeObjectCount;
        final String imgUrlFinal = imgUrl;

        EventQueue.invokeLater(new Runnable()
        {
            public void run()
            {
                try
                {
                    Game hra = new Game(makeObjectFinal, imgUrlFinal);
                    hra.setVisible(true);
                }
                catch (IOException ex)
                {
                }
            }
        });
    }

    public void editScore(int score)
    {
        this.score += score;
        scoreLabel.setText(this.score + "");
    }

    public void startGame()
    {
        timer.start();
    }

    public void pauseGame()
    {
        timer.stop();
    }

    public int getObjectCount()
    {
        return objectCount;
    }

    public String getImagePath()
    {
        return imagePath;
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents()
    {

        scroeTextLabel = new javax.swing.JLabel();
        scoreLabel = new javax.swing.JLabel();
        contentPanel = new javax.swing.JPanel();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        setTitle("Slniecko");

        scroeTextLabel.setText("Sk처re:");

        scoreLabel.setText("0");

        contentPanel.setLayout(new javax.swing.BoxLayout(contentPanel, javax.swing.BoxLayout.LINE_AXIS));

        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
        getContentPane().setLayout(layout);
        layout.setHorizontalGroup(
                layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                        .addGroup(layout.createSequentialGroup()
                                .addContainerGap()
                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                        .addComponent(contentPanel, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                                        .addGroup(layout.createSequentialGroup()
                                                .addComponent(scroeTextLabel)
                                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                                .addComponent(scoreLabel)
                                                .addGap(0, 344, Short.MAX_VALUE)))
                                .addContainerGap())
        );
        layout.setVerticalGroup(
                layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                        .addGroup(layout.createSequentialGroup()
                                .addContainerGap()
                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                                        .addComponent(scroeTextLabel)
                                        .addComponent(scoreLabel))
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                                .addComponent(contentPanel, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                                .addContainerGap())
        );

        pack();
    }// </editor-fold>//GEN-END:initComponents

    /**
     * @param args the command line arguments
     */


    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JPanel contentPanel;
    private javax.swing.JLabel scroeTextLabel;
    private javax.swing.JLabel scoreLabel;
    // End of variables declaration//GEN-END:variables
}
